--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -1,2 +1,35 @@
-<h1>Epicenter#show_user</h1>
-<p>Find me in app/views/epicenter/show_user.html.erb</p>
+<h1><%= @user.username %></h1>
+
+<% if current_user.id != @user.id %>
+  <% if current_user.following.include? @user.id %>
+    <div>
+      <%= form_tag('/unfollow') do %>
+        <span class="cant-see-me">
+          <%= text_field_tag :unfollow_id, @user.id %>
+        </span>
+        <%= submit_tag "Unfollow", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  <% else %>
+    <div>
+      <%= form_tag('/now_following') do %>
+        <span class="cant-see-me">
+          <%= text_field_tag :follow_id, @user.id %>
+        </span>
+        <%= submit_tag "Follow", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  <% end %>
+<% end %>
+
+<div class="row">
+  <% @user.tweets.each do |tweet| %>
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <p><%= tweet.message %></p>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
