--- a/app/views/epicenter/unfollow.html.erb
+++ b/app/views/epicenter/unfollow.html.erb
@@ -1,2 +1,1 @@
-<h1>Epicenter#unfollow</h1>
-<p>Find me in app/views/epicenter/unfollow.html.erb</p>
+<p>You are no longer following <%= @user.username %>.</p>
