--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= at_sign(@tweet.user.username) %>
+  <%= link_to at_sign(@tweet.user.username), user_profile_path(id: @tweet.user.id) %>
 </p>
 
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
